# selfware

./: .dockerignore  .evolution-log.jsonl  .gitignore  .pre-commit-config.yaml  .tarpaulin.toml  ACTION_PLAN_CORRECTED.md  ARCHITECTURE_SUMMARY.md  CHANGELOG.md  CODE_REVIEW_FINDINGS.md  COMPREHENSIVE_PRODUCTION_READINESS_REVIEW.md  COMPREHENSIVE_PROJECT_REVIEW.md  COMPREHENSIVE_REVIEW_V2.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EVAL_REPORT.md  GEMINI_RECOMMENDATIONS.md  IMPROVEMENT_TASK.md  LICENSE  MISSING_ELEMENTS_REPORT.md  PRODUCTION_ACTION_PLAN.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_READINESS_REVIEW.md  PROJECT_REVIEW_2026_03_06.md  QUICK_FIXES.md  README.md  REVIEW_COMPARISON.md  REVIEW_CORRECTIONS.md  SECOND_OPINION_REVIEW.md  SECURITY.md  VERIFIED_DEEP_REVIEW.md  VERIFIED_PROJECT_STATE.md  add_api_completion.py  append_completion.py  cobertura.xml  current_reflect.rs  deny.toml  dummy_config.toml  fix_auto_task.py  fix_auto_task2.py  (+25 more)
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
benches/: token_processing.rs  vlm_benchmark.rs
docs/: AGENT_SWARM_UI_SUMMARY.md  COMPREHENSIVE_REVIEW.md  DEEP_DIVE_REVIEW.md  LONG_RUNNING_TEST_PLAN.md  MEGA_TEST_PLAN_SUMMARY.md  QWEN_CODE_CLI_UI.md  UX_RECOMMENDATIONS.md  agent_swarm_ui_guide.md  architecture.md
examples/: basic_chat.rs  custom_config.rs  multi_agent.rs  run_task.rs  swarm_ui_demo.rs
experiments/interactive-ux-overhaul/: IMPROVEMENTS_REPORT.md
experiments/selfware-longrun-mega/: .gitignore  README.md  selfware.longrun.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: path_validator.rs  tool_parser.rs
k8s/: README.md  configmap.yaml  deployment.yaml  namespace.yaml  secret.yaml  service.yaml
kimi_review/: Cargo.toml  IMPLEMENTATION_GUIDE.md  SELFWARE_RSI_ROADMAP.md  cognitive_system.rs  memory_architecture_design.md  memory_hierarchy.rs  self_reference.rs  selfware_infrastructure_design.md  selfware_longrunning_infrastructure.md  selfware_self_modification_design.md  token_budget.rs
kimi_review/src/: config.rs  error.rs  lib.rs  main.rs  self_healing.rs
kimi_review/src/agent/: mod.rs  state.rs  supervisor.rs  worker.rs
kimi_review/src/checkpoint/: compression.rs  incremental.rs  mod.rs  recovery.rs  storage.rs
kimi_review/src/llm/: context.rs  engine.rs  mod.rs  model_manager.rs  queue.rs
kimi_review/src/observability/: logging.rs  metrics_collector.rs  mod.rs  tracing_setup.rs
kimi_review/src/resource/: disk.rs  gpu.rs  memory.rs  mod.rs  quotas.rs
kimi_review/src/supervision/: health.rs  mod.rs
sab_results/scorecards/: qwen3_5_122b_a10b.md  qwen3_5_122b_a10b_nvfp4.md
src/: analytics.rs  analyzer.rs  api_testing.rs  autonomy.rs  bm25.rs  browser_automation.rs  cache.rs  checkpoint.rs  cicd.rs  cli.rs  code_graph.rs  code_review.rs  cognitive.rs  communication.rs  config.rs  confirm.rs  container.rs  contract_testing.rs  database_tools.rs  degradation.rs  distributed.rs  doc_generator.rs  dry_run.rs  dyslexia_friendly.rs  edit_history.rs  embedded.rs  episodic.rs  errors.rs  extensions.rs  ide_plugin.rs  image_understanding.rs  intelligence.rs  intent.rs  learning.rs  lib.rs  literate.rs  log_analysis.rs  main.rs  mcp.rs  memory.rs  (+41 more)
src/agent/: checkpointing.rs  context.rs  context_management.rs  execution.rs  interactive.rs  last_tool.rs  learning.rs  loop_control.rs  mod.rs  planning.rs  streaming.rs  task_runner.rs  tests.rs  tui_events.rs
src/analysis/: bm25.rs  code_graph.rs  mod.rs  tech_debt.rs  vector_store.rs
src/api/: mod.rs  types.rs
src/cognitive/: cognitive_system.rs  compilation_manager.rs  episodic.rs  intelligence.rs  intelligence.rs.bak  knowledge_graph.rs  learning.rs  load.rs  memory_hierarchy.rs  meta_learning.rs  metrics.rs  mod.rs  rag.rs  rsi_orchestrator.rs  self_edit.rs  self_improvement.rs  self_reference.rs  state.rs  token_budget.rs
src/collaboration/: communication.rs  issue_tracker.rs  mod.rs
src/config/: mod.rs  resources.rs  typed.rs
src/demo/: mod.rs  runner.rs
src/devops/: cloud_infra.rs  container.rs  database.rs  database_tools.rs  distributed.rs  kubernetes.rs  mod.rs  monorepo.rs  process_manager.rs
src/evolution/: ast_tools.rs  daemon.rs  fitness.rs  mod.rs  sandbox.rs  telemetry.rs  tournament.rs
src/input/: command_registry.rs  completer.rs  ghost_text.rs  highlighter.rs  mod.rs  prompt.rs  validator.rs
src/kv_store/: entry.rs  mod.rs  query.rs  serialization.rs  store.rs
src/observability/: analytics.rs  carbon_tracker.rs  dashboard.rs  log_analysis.rs  mod.rs  telemetry.rs  test_dashboard.rs
src/orchestration/: mod.rs  multiagent.rs  parallel.rs  planning.rs  swarm.rs  visual_loop.rs  workflow_dsl.rs  workflows.rs
src/output/: mod.rs
src/resource/: disk.rs  gpu.rs  memory.rs  mod.rs  quotas.rs
src/safety/: checker.rs  confirm.rs  dry_run.rs  mod.rs  path_validator.rs  redact.rs  sandbox.rs  scanner.rs  threat_modeling.rs  yolo.rs
src/self_healing/: executor.rs
src/session/: cache.rs  chat_store.rs  checkpoint.rs  edit_history.rs  encryption.rs  local_first.rs  mod.rs
src/supervision/: circuit_breaker.rs  health.rs  mod.rs
src/testing/: api_testing.rs  code_review.rs  mock_api.rs  mod.rs  verification.rs
src/tools/: analyzer.rs  browser.rs  cargo.rs  container.rs  file.rs  fim.rs  git.rs  hot_reload.rs  http.rs  knowledge.rs  mod.rs  package.rs  process.rs  screen_capture.rs  search.rs  shell.rs  vision.rs
src/tui/: app.rs  dashboard_widgets.rs  garden_view.rs  layout.rs  markdown.rs  mod.rs  palette.rs  (+1 more)
system_tests/: monitor_dashboard.sh  quick_monitor_test.sh  run_2h_monitored.sh  run_full_system_test.sh  run_monitored_test.sh  test_summary.sh  watch_test.sh
tests/: compilation_sandbox_test.rs  e2e_phase5_test.rs  e2e_tools_test.rs  evolution_integration_test.rs  prop_safety.proptest-regressions  prop_safety.rs  prop_tool_parser.rs  resource_governance_test.rs  rsi_integration_test.rs  system_test.rs
vlm_results/: vlm_benchmark_report.json  vlm_benchmark_report.md
(+614 files in other folders)
