[package]
name = "selfware"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Your personal AI workshop — software you own, software that lasts"
authors = ["Trebuchet Network"]
homepage = "https://selfware.me"
repository = "https://github.com/architehc/selfware"
keywords = ["ai", "agent", "local-first", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "process"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
git2 = "0.20"  # Updated for security fixes (CVE-2024-24575, CVE-2024-24577)
walkdir = "2.4"
regex = "1.11"
colored = "3.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
tempfile = "3.9"
base64 = "0.22"
glob = "0.3"
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
uuid = { version = "1.6", features = ["v4"] }
once_cell = "1.19"
whoami = "2.1"

# Modern CLI/TUI
reedline = "0.32"
crossterm = "0.27"
ratatui = "0.26"
fuzzy-matcher = "0.3"
syntect = "5.2"
nu-ansi-term = "0.50"
dirs = "5.0"
nucleo = "0.5"  # Fast fuzzy matcher
pulldown-cmark = "0.9"  # Markdown parsing (0.12+ has breaking API changes)
similar = "2.4"  # Diff algorithm

# Vector Memory & RAG
hnsw_rs = "0.3"  # Hierarchical Navigable Small World graphs (embedded vector search)
bincode = "1.3"  # Fast binary serialization

# Workflows
serde_yaml = "0.9"  # YAML workflow definitions

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal"] }

[features]
default = []
integration = []  # Enable with: cargo test --features integration
# Orphan/experimental modules - not used in core functionality
extras = []

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "selfware"
path = "src/lib.rs"

[[bin]]
name = "selfware"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
required-features = ["integration"]

# Examples
[[example]]
name = "basic_chat"
path = "examples/basic_chat.rs"

[[example]]
name = "run_task"
path = "examples/run_task.rs"

[[example]]
name = "multi_agent"
path = "examples/multi_agent.rs"

[[example]]
name = "custom_config"
path = "examples/custom_config.rs"
