[package]
name = "selfware"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Selfware Contributors"]
description = "Autonomous AI agent runtime with recursive self-improvement"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "parking_lot"] }
tokio-util = { version = "0.7", features = ["codec", "time"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Compression
zstd = "0.13"
flate2 = "1.0"

# Storage
sled = "0.34"
rocksdb = { version = "0.21", optional = true }
redb = "1.0"

# HTTP/API
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }

# Metrics
metrics = "0.23"
metrics-exporter-prometheus = "0.14"

# Tracing/Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-opentelemetry = "0.23"
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }

# System monitoring
sysinfo = "0.30"
nvml-wrapper = "0.10"
psutil = "3.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
regex = "1.10"
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "5.5"
lru = "0.12"
bytes = "1.5"

# Content-defined chunking
fastcdc = "0.2"
blake3 = "1.5"

# Error recovery
backoff = { version = "0.4", features = ["tokio"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Testing
tempfile = "3.9"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
criterion = "0.5"

[features]
default = ["rocksdb-backend"]
rocksdb-backend = ["rocksdb"]
vllm = []
ollama = []

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "selfware"
path = "src/main.rs"
